--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,8 +87,8 @@ jobs:
   build-docker:
     name: Build Docker Image
     runs-on: ubuntu-latest
-    # 只在 push 到 main 或打 tag 时构建 Docker
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
+    # 只在 push 到 main 时构建 Docker
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
     steps:
       - name: Checkout code
@@ -103,26 +103,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: kidself/naspt
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=raw,value=latest,enable={{is_default_branch}}
-      
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: kidself/naspt:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -130,7 +117,8 @@ jobs:
     name: Create Release
     needs: [build-macos, build-windows]
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v')
+    # 每次 push 到 main 都创建 Release
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
     steps:
       - name: Checkout code
@@ -148,14 +136,38 @@ jobs:
           name: naspt-windows
           path: artifacts/windows
       
+      - name: Get commit info
+        id: commit
+        run: |
+          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+          echo "message=$(git log -1 --pretty=%B | head -1)" >> $GITHUB_OUTPUT
+          echo "date=$(date -u +'%Y-%m-%d %H:%M:%S UTC')" >> $GITHUB_OUTPUT
+      
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: "latest-${{ steps.commit.outputs.sha_short }}"
+          name: "Latest Build - ${{ steps.commit.outputs.sha_short }}"
+          body: |
+            ## Latest Build
+            
+            **Commit:** ${{ steps.commit.outputs.sha_short }}
+            **Message:** ${{ steps.commit.outputs.message }}
+            **Date:** ${{ steps.commit.outputs.date }}
+            
+            ### Downloads
+            - macOS: `naspt-macos.zip`
+            - Windows: `naspt.exe`
+            
+            ### Docker
+            ```bash
+            docker pull kidself/naspt:latest
+            ```
           files: |
             artifacts/macos/naspt-macos.zip
             artifacts/windows/naspt.exe
           draft: false
-          prerelease: false
+          prerelease: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
