--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -119,6 +119,8 @@ jobs:
     runs-on: ubuntu-latest
     # 每次 push 到 main 都创建 Release
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    permissions:
+      contents: write  # 需要写入权限来创建 Release
     
     steps:
       - name: Checkout code
